--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vuefire-quickstart</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
+    <title>Pegg</title>
   </head>
   <body>
     <div id="app"></div>
